--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/lfm-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LFM-2.5 Thinker 🤖</title>
+    <title>LFM-2.5 Thinker 💭</title>
   </head>
 
   <body>
